# pixar

./: README.md  main.tf  odbc_install.sh  pixar_install.sh
.github/workflows/: ci.yml
dagster_pixar/: pyproject.toml  pyproject.toml.bak  setup.py
dagster_pixar/dagster_pixar/: assets.py  definitions.py  project.py  schedules.py
dbt_pixar/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt_pixar/models/dm/: income_by_genre.sql  income_by_subgenre.sql
dbt_pixar/models/dw/: dim_award_type.sql  dim_films.sql  dim_genre.sql  dim_subgenre.sql  fact_film_genre.sql  fact_film_subgenre.sql  fact_income.sql
dbt_pixar/models/stage/: stage_academy.sql  stage_box_office.sql  stage_films.sql  stage_genres.sql
dbt_pixar/seeds/: genres.csv  seeds.yml
